# BlurEffect

./: CMakeLists.txt  LICENSE  README.md  blur_effect.h  drag_move_widget.h  main.cpp  res.qrc
